pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: devops-pod
spec:
  containers:
    - name: devops-container
      image: nginx
      ports:
        - containerPort: 80
